# bevy_libp2p_test_1

./: AGENTS.md  Cargo.toml  OBJECTIVE.md  PROMPT.md  SYNTAX.md  opencode.json
.zed/: tasks.json
examples/: boxes.rs  boxes_fake_network.rs  boxes_headless_only_bevy.rs  boxes_only_bevy.rs  boxes_test_bevy_dual_window.rs  boxes_test_only_bevy.rs  clickers_headless_only_bevy.rs  clickers_only_bevy.rs  headless_run_only_bevy.rs  test_bevy_dual_window.rs  test_only_bevy.rs
src/: lib.rs
src/app/: mod.rs  plugin.rs  plugin_build.rs
src/boxes/: mod.rs  plugin.rs
src/boxes/component/: Position.rs  Velocity.rs  mod.rs
src/boxes/system/: apply_input_to_velocity.rs  character_controller.rs  collect.rs  handle_player_join.rs  handle_player_leave.rs  mod.rs  sync_transform.rs
src/clicker/: mod.rs  plugin.rs
src/clicker/component/: ClickCounter.rs  ClickTarget.rs  Owner.rs  mod.rs
src/clicker/system/: detect_click.rs  handle_player_join.rs  handle_player_leave.rs  mod.rs  update_counter.rs
src/game/: collect_input.rs  input.rs  input_buffer.rs  mod.rs  physics.rs  player.rs  player_input.rs  player_input_system.rs  position.rs  sync_transform.rs  velocity.rs
src/p2p/: config.rs  fake_network.rs  get_game_topic.rs  handle_incoming_message.rs  handler.rs  log_peer_count.rs  mod.rs  plugin.rs  plugin_build.rs  poll_network.rs  poll_network_system.rs  protocol.rs  swarm.rs
src/sync/: apply_remote_inputs.rs  broadcast_input.rs  create_message.rs  messages.rs  mod.rs  network_state.rs  parse_message.rs  remote_input_buffer.rs  sync_system.rs  tick.rs  tick_impl.rs
(+10 files in other folders)
